--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,13 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Poppins:wght@400;500;700&family=Montserrat:wght@400;500;700&family=Open+Sans:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 
-$primary-background: rgb(21, 46, 84); // Dark gray or near-black
+$primary-background: #152e54; //Dark gray or near-black
 $secondary-background: #080808; // Slightly lighter than primary
 $primary-accent: #6a0dad; // Deep purple
 $secondary-accent: #ff69b4; // Hot Pink
-$text-color: #ffffffa7; // White or off-white for text
+$primary-text-color: #ffffffa7; // White or off-white for text
+$secondary-text-color: #64ffda; // Cyan
 
 // Font variables
-$primary-font: "Roboto", sans-serif;
 $title-font: "Poppins", sans-serif;
-$accent-font: "Montserrat", sans-serif;
-$secondary-font: "Open Sans", sans-serif;
+$primary-font: "Raleway", sans-serif;
+$secondary-font: "Playfair Display", serif;
