--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -11,7 +11,7 @@ body {
   min-height: 100dvh;
   background-color: v.$primary-background;
   font-family: v.$primary-font;
-  color: v.$text-color;
+  color: v.$primary-text-color;
 }
 html {
   scroll-behavior: smooth;
