--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400..900&family=Poppins:wght@100..900&family=Raleway:wght@600;700&display=swap");
 
 $primary-background: #152e54; //Dark gray or near-black
 $secondary-background: #080808; // Slightly lighter than primary
-$primary-accent: #6a0dad; // Deep purple
-$secondary-accent: #ff69b4; // Hot Pink
+$primary-accent: #ff69b4; // Deep purple
 $primary-text-color: #ffffffa7; // White or off-white for text
 $secondary-text-color: #64ffda; // Cyan
 
