--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -8,7 +8,7 @@
   margin-bottom: 2rem;
   position: relative;
   width: fit-content;
-  margin: auto;
+  margin: 0 auto;
   font-family: v.$title-font;
   &:after {
     display: block;
