Changed the secondary background variable

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400..900&family=Poppins:wght@100..900&family=Raleway:wght@600;700&display=swap");
 
 $primary-background: #152e54; //Dark gray or near-black
-$secondary-background: #080808; // Slightly lighter than primary
+$secondary-background: #101d33; // A dark blue with a good contrast
+
 $primary-accent: #ff69b4; // Deep purple
 $primary-text-color: #ffffffa7; // White or off-white for text
 $secondary-text-color: #64ffda; // Cyan
