--- a/src/app/_components/Skills/techStack.module.scss
+++ b/src/app/_components/Skills/techStack.module.scss
@@ -1,23 +1,56 @@
 @use "../../../styles/variables" as v;
 @use "../../../styles//mixins" as m;
 .skillsSection {
-  min-height: 100dvh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   position: relative;
+  min-width: 100dvw;
+  overflow: scroll;
 
   h1 {
     @include m.title-style;
+    margin-bottom: 1.5rem;
   }
   .techSlider {
+    overflow: hidden;
+    padding: 60px 0;
     display: flex;
-    gap: 1rem;
-    .tech {
-      .techIcon {
-        width: 50px;
-        height: 50px;
+    .techSlide {
+      gap: 1rem;
+      padding: 1rem;
+      background-color: black;
+      animation: 15s slideEffect infinite linear;
+      width: fit-content;
+      white-space: nowrap;
+      .tech {
+        min-width: 150px;
+        height: 150px;
+        display: inline-flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        padding: 1rem;
+        color: v.$secondary-text-color;
+        background-color: v.$secondary-background;
+        box-shadow: 0px 0px 16px v.$secondary-background;
+        border-radius: 1rem;
+        margin: 0 20px;
+        .techIcon {
+          width: 50px;
+          height: 50px;
+        }
       }
     }
+  }
+}
+
+@keyframes slideEffect {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
   }
 }
