--- a/src/app/_components/Skills/techStack.module.scss
+++ b/src/app/_components/Skills/techStack.module.scss
@@ -7,14 +7,14 @@
   position: relative;
   min-width: 100dvw;
   overflow: scroll;
+  height: 300px;
 
   h1 {
     @include m.title-style;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
   }
   .techSlider {
     overflow: hidden;
-    padding: 60px 0;
     display: flex;
     .techSlide {
       gap: 1rem;
