Changed the background color variable

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400..900&family=Poppins:wght@100..900&family=Raleway:wght@600;700&display=swap");
 
-$primary-background: #152e54; //Dark gray or near-black
+$primary-background: #031024; //Dark gray or near-black
 $secondary-background: #101d33; // A dark blue with a good contrast
 
 $primary-accent: #ff69b4; // Deep purple
