--- a/src/app/_components/Skills/techStack.module.scss
+++ b/src/app/_components/Skills/techStack.module.scss
@@ -9,6 +9,30 @@
   min-width: 100dvw;
   overflow: hidden;
   min-height: 100dvh;
+  &::after {
+    content: " ";
+    left: 0;
+    bottom: 0;
+    width: 30%;
+    height: 80%;
+    position: absolute;
+    z-index: -1;
+    background: linear-gradient(125deg, rgb(0, 255, 255) 0%, deeppink 35%);
+    -webkit-mask: radial-gradient(circle at 5% 30%, red 0%, transparent 25%);
+    animation: bubble 3s infinite ease-in-out,
+      colorShift 10s infinite ease-in-out;
+  }
+  &::before {
+    content: " ";
+    left: 65%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    background: linear-gradient(125deg, aqua 13%, deeppink 38%);
+    -webkit-mask: radial-gradient(circle at 30% 50%, red 0%, transparent 25%);
+    animation: bubble 10s infinite ease-in-out;
+  }
 
   h1 {
     @include m.title-style;
@@ -87,5 +111,15 @@
   }
   to {
     transform: translateX(-50%);
+  }
+}
+
+@keyframes bubble {
+  0%,
+  100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
   }
 }
