--- a/src/app/_components/ContactMe/contact-me.module.scss
+++ b/src/app/_components/ContactMe/contact-me.module.scss
@@ -87,10 +87,11 @@
           .submitButton {
             border-radius: 0.5rem;
             background: linear-gradient(
-              to right,
-              v.$primary-accent,
-              v.$secondary-text-color
+              125deg,
+              rgb(0, 255, 255) 0%,
+              deeppink 75%
             );
+
             outline: none;
             border: none;
             padding: 0.6rem 1.25rem;
