--- a/src/app/_components/ProjectsSection/projects-section.module.scss
+++ b/src/app/_components/ProjectsSection/projects-section.module.scss
@@ -89,6 +89,7 @@
             display: flex;
             gap: 1rem;
             text-align: center;
+            justify-content: center;
             a {
               color: inherit;
               text-decoration: none;
