--- a/src/app/_components/ProjectsSection/projects-section.module.scss
+++ b/src/app/_components/ProjectsSection/projects-section.module.scss
@@ -90,6 +90,7 @@
             gap: 1rem;
             text-align: center;
             justify-content: center;
+            padding-top: 0.75rem;
             a {
               color: inherit;
               text-decoration: none;
